Create 2. How to get into software.md

--- a/posts/2. How to get into software.md
+++ b/posts/2. How to get into software.md
@@ -1,8 +1,8 @@
 # How to get into software
-I end up talking to a lot of people about my own journey into software development, so I am creating this guide.
+I end up talking to a lot of people about how to get into software development, so I am creating this guide.
 
 This guide is by no means comprehensive, and is light on specifics.
-This is by design as the vast majority of the learning you will need to do is self directed in your career
+This is by design as the vast majority of the learning you will need to do is self directed in your career.
 
 ## 1. Install [Arch Linux](https://archlinux.org) on your main computer and use it for ALL computer tasks.
 I picked Arch not because it is the most perfect or the best, but because it requires you to see what's going into your computing environment.
@@ -63,3 +63,29 @@ Do some of these problems.
 Like 20 will be enough to see the common ways people write performant code and it will expose you to many of the common algorithms that will be included in programming interviews.
 A lot of people overdo them and never end up getting practical programming knowledge, so you'll want to avoid becoming a career leetcoder.
 
+## Additional musings
+
+### You need to write programs (or make websites)
+The numbered instructions above are not enough to get a job.
+You will also need to have some examples of code you've written along with the experience of having written the code.
+Coming up with programs (or websites) to write is difficult. 
+The only way I've been able to reliably do it is by examining what happens in my own computing experience and finding things that annoy me.
+One of my favorite problems to solve is changing my desktop wallpaper with a keyboard command.
+It's not ground-breaking or even technically impressive, but it's something that makes my computing experience some small amount more plesant.
+The important thing isn't that you make wild programs that change the world, but that you get experience writing programs.
+
+### The ordering of the above list is not as strict as I make it look
+Each one of these steps does not take the same amount of time, and they are meant to overlap quite a bit.
+
+### This is by no means an exhaustive list of things you need to do
+I hope that in researching and completing the above tasks, you will have gained enough knowledge about the other aspects of programming to make yourself a well-rounded programmer. 
+Do not be afraid to go down rabbit holes of learning about things that seem to pull you from the loose path I've laid out.
+These are the things where you will find your niche.
+
+### These tasks will not be done instantly
+I expect someone to have done enough to get an entry level job after about a year or so of doing the things on this list.
+You may take more time or less time.
+This is not a problem.
+
+### You can ask me for help if you want to
+I don't care who you are. If you found your way to my 
