Update 2. How to get into software.md

--- a/posts/2. How to get into software.md
+++ b/posts/2. How to get into software.md
@@ -88,4 +88,8 @@ You may take more time or less time.
 This is not a problem.
 
 ### You can ask me for help if you want to
-I don't care who you are. If you found your way to my 
+I don't care who you are.
+If you found your way to this post and you want some help, feel free to reach out to me.
+I'm available on many platforms as npmaile.
+If you've seen me post on it in the last 6 months, there's a great chance that I will respond.
+I cannot promise I will get back to you as I am just one man, but I like to see others succeed and will do anything I can to make that happen.
