Update 2. How to get into software.md

--- a/posts/2. How to get into software.md
+++ b/posts/2. How to get into software.md
@@ -93,3 +93,11 @@ If you found your way to this post and you want some help, feel free to reach ou
 I'm available on many platforms as npmaile.
 If you've seen me post on it in the last 6 months, there's a great chance that I will respond.
 I cannot promise I will get back to you as I am just one man, but I like to see others succeed and will do anything I can to make that happen.
+
+### Apply to jobs frequently
+You will not get a job the first time you apply.
+You will not be ready to work in software the first time you apply.
+Do not let this stop you from applying to entry level positions.
+Eventually, you will get to a screening interview before you get rejected.
+Eventually, you will get to a technical interview before you get rejected.
+Eventually, you will get a job.
