--- a/posts/3. The Secret World of Programmers.md
+++ b/posts/3. The Secret World of Programmers.md
@@ -3,7 +3,7 @@ There are many tasks that I believe to be extremely simple and easy that I canno
 Here are some examples to illustrate the divide between programmers(or sysadmins or anyone who really knows their way around the command line and some lower level stuff) from normal people.
 Note: There are many things to think about when it comes to user interface design and computing philosophy I could touch on, but won't.
 
-## "Why does it have to be so complicated. I just want to install a program"
+## "Why does it have to be so complicated? I just want to install a program"
 I come across this oftentimes when I'm trying to get someone to use a fancy program that solves their problem exactly.
 I tell them to execute the simple and easy step of running `$PACKAGE_MANAGER install $PROGRAM`, and they don't want to do it.
 
@@ -11,26 +11,27 @@ I tell them to execute the simple and easy step of running `$PACKAGE_MANAGER ins
 
 *"All you need to do is open the terminal... oh yeah, you probably need to know how to do that... Anyway, once it's open all you need to do us run... Oh yeah, well you need to install the package manager"*
 
-*"Well after you install the package manager, you just need to... oh yeah, They just updated it and you need to change your path to..."*
+*"Well after you install the package manager, you just need to... oh yeah, They just updated it, and you need to change your path to..."*
 
-*"Alright. Just go to https://$SOFTWARE and then you can install it from there"*
+*"Alright. Just go to https://$SOFTWARE, and then you can install it from there"*
 
 ## "What was wrong with Microsoft Word?"
 I love markdown and write more-or-less all of my written word in it.
 It's great.
-You can do links and tables, headings, and put in whatever you want with a few html tags if you're feeling saucy.
-Not only that, but you can render it out into pretty much any way people are used to viewing documents using something like [pandoc](https://pandoc.org).
+You can easily add links and tables, headings, and put in whatever you want with a few HTML tags if you're feeling saucy.
+Not only that, but you can render it out into pretty much any way people are used to viewing documents using something like [Pandoc](https://pandoc.org).
 The problem comes when I wish to share the document.
 Non-technical people I know don't know what to do with some `notes.md` file once they get it.
-Their OS just gives them a "How do I open this?" dialogue that lists off some unrelated programs. 
+Their OS just gives them a "How do I open this" dialogue that lists off some unrelated programs. 
 If I give them a compiled document, they just send me back their edits of the compiled document, so I now have to open up word or adobe or whatever and copy/paste it back into my original markdown file.
 
 *"But Alas"* you say, *"All they need to do is edit it in any text editor"*
 
-I send them a link to [Markdown Guide](https://markdownguide.org) and tell them to edit it in microsoft word, and I receive the same three questions every time.
+I send them a link to [Markdown Guide](https://markdownguide.org) and tell them to edit it in Microsoft Word, and I receive the same three questions every time.
 
-*"Why do you want me to learn a programming language?"*, *"Is Microsoft word what you mean by a text editor"*, and *"Why couldn't you just do this in something simple like Word?"*
+*"Why do you want me to learn a programming language?"*, *"Is Microsoft Word what you mean by a text editor"*, and *"Why couldn't you just do this in something simple like Word?"*
 
-I try and try to explain that this arcane system of monochrome text and rendering steps is **ACTUALLY** easier than editing in microsoft word, but my pleas fall on deaf ears.
+I try and try to explain that this arcane system of monochrome text and rendering steps is **ACTUALLY** easier than editing in Microsoft Word, but my pleas fall on deaf ears.
 
-## "
+## "Why would you do that in the command line? It's way easier using $Program"
+
