--- a/posts/2. How to get into software.md
+++ b/posts/2. How to get into software.md
@@ -4,6 +4,8 @@ I end up talking to a lot of people about how to get into software development, 
 This guide is by no means comprehensive, and is light on specifics.
 This is by design as the vast majority of the learning you will need to do is self directed in your career.
 
+Additionally, this guide is much more focused on backend development, though you will be exposed to both backend and frontend work if you follow along.
+
 ## 1. Install [Arch Linux](https://archlinux.org) on your main computer and use it for ALL computer tasks.
 I picked Arch not because it is the most perfect or the best, but because it requires you to see what's going into your computing environment.
 This is to see what a computer does at a little lower level, and see how a more modular computing environment works.
@@ -23,7 +25,8 @@ This should be more personal to you than your computer is as you will find your 
 ## 4. Create a profile on [Github](https://github.com/) and learn the basics of version control with git.
 From here out, you will put all of your code and things in your github so that potential employers will see that you are productive.
 Git is a difficult program to understand and work with, and much of it will not make sense.
-Use it regularly and, with practice and reading, you will eventually grow to understand enough to use it in a collaborative environment
+Use it regularly and, with practice and reading, you will eventually grow to understand enough to use it in a collaborative environment.
+A good resource for this is the first few chapters of [this book](https://git-scm.com/book/en/v2)
 
 ## 5. Learn [Markdown](https://www.markdownguide.org/)
 Use it to write documentation, notes, and pretty much anything that you have been writing in word or on paper.
@@ -32,7 +35,7 @@ This will be your main way to write documentation about your programs.
 This blog, and most of the written prose I put out are all written in markdown.
 
 ## 6. Start lurking on [Hacker News](https://news.ycombinator.com) and [Lobsters](https://lobste.rs). 
-These are places where anyone from college students to CEOS hang out and discuss tech topics.
+These are places where anyone from college students to CEOs hang out and discuss tech topics.
 You will see technologies come and go, people complain about things that are objectively good, and defend things that are objectively bad.
 Along the way, you will read thousands of blog posts about all programming and technology old and new.
 This is also where you will learn the in-group terminology and concepts that help you to get jobs eventually.
@@ -101,3 +104,4 @@ Do not let this stop you from applying to entry level positions.
 Eventually, you will get to a screening interview before you get rejected.
 Eventually, you will get to a technical interview before you get rejected.
 Eventually, you will get a job.
+It took me around 60 applications before I got my first programming job.
