additional example and conclusion

--- a/posts/3. The Secret World of Programmers.md
+++ b/posts/3. The Secret World of Programmers.md
@@ -1,7 +1,5 @@
 # The Secret World of Programmers
-There are many tasks that I believe to be extremely simple and easy that I cannot seem to convince non-programming people of their simplicity.
-Here are some examples to illustrate the divide between programmers(or sysadmins or anyone who really knows their way around the command line and some lower level stuff) from normal people.
-Note: There are many things to think about when it comes to user interface design and computing philosophy I could touch on, but won't.
+It feels sometimes like programmers and normal people speak a totally different language and use computers in totally different ways. Something that you can discuss with more-or-less any competent programmer or sysadmin is completely foreign to people outside of our world. Here are a handful of examples
 
 ## "Why does it have to be so complicated? I just want to install a program"
 I come across this oftentimes when I'm trying to get someone to use a fancy program that solves their problem exactly.
@@ -34,4 +32,35 @@ I send them a link to [Markdown Guide](https://markdownguide.org) and tell them 
 I try and try to explain that this arcane system of monochrome text and rendering steps is **ACTUALLY** easier than editing in Microsoft Word, but my pleas fall on deaf ears.
 
 ## "Why would you do that in the command line? It's way easier using $Program"
+There are a bunch of little things that come up that I will mention off-hand, and have someone question me about it.
+I explain how simple it is to just `convert -density 300 input.pdf -resize 50% output.png`, and I'm met with a blank stare
 
+*"But I'm not a hacker"*, they plead.
+
+*"This should be a simple program"*
+
+And of course it **is** a simple program, but whenever the first step is opeing a terminal, it is no longer simple
+
+## "What do you mean you can't just write a program to $THING?"
+This comes up every once in a while.
+I generally say the same few things to most people.
+*"No, your idea is not unique"*
+
+*"No I can't devote 8 months to building your app*"
+
+If the idea is particularly unique I give this new set of quotes
+
+*"Okay, I will do it. First, I'll need you to come up with a mock-up of every page you want and a description of what each button does*"
+
+*"Great, now that I see it, I'm going to need 280k for the 6 months of my and two contractor's time*"
+
+*"Oh, great. Good luck finding someone else to do it!*"
+
+## What was the point of writing this post?
+I don't know.
+Sometimes I'm frustrated by these things and I become disappointed that I cannot come up with a way to convince people that the world works the way I think it does.
+Other times, I think the solution lies in our hands.
+Maybe with enough programming and user-interface design, we can make the tools that make our lives easier good enough to be used by the general public and make our ways known.
+Sometimes I think that the public computing education should be completely overhauled to support workflows like mine.
+
+Maybe I just need to have a little more empathy (or is it sympathy?) for normal people.
