reword the app request

--- a/posts/3. The Secret World of Programmers.md
+++ b/posts/3. The Secret World of Programmers.md
@@ -41,7 +41,7 @@ I explain how simple it is to just `convert -density 300 input.pdf -resize 50% o
 
 And of course it **is** a simple program, but whenever the first step is opeing a terminal, it is no longer simple
 
-## "What do you mean you can't just write a program to $THING?"
+## "Hey buddy, can you write my app?"
 This comes up every once in a while.
 I generally say the same few things to most people.
 *"No, your idea is not unique"*
