--- a/posts/3. The Secret World of Programmers.md
+++ b/posts/3. The Secret World of Programmers.md
@@ -1,5 +1,6 @@
-# The Secret World of Programmers
-It feels sometimes like programmers and normal people speak a totally different language and use computers in totally different ways. Something that you can discuss with more-or-less any competent programmer or sysadmin is completely foreign to people outside of our world. Here are a handful of examples
+# Speak English to Me, The Secret World of Programmers
+It feels sometimes like programmers and normal people speak a totally different language and use computers in totally different ways. Something that you can discuss with more-or-less any competent programmer or sysadmin is completely foreign to people outside of our world.
+Here are a handful of examples I've come across.
 
 ## "Why does it have to be so complicated? I just want to install a program"
 I come across this oftentimes when I'm trying to get someone to use a fancy program that solves their problem exactly.
@@ -41,20 +42,17 @@ I explain how simple it is to just `convert -density 300 input.pdf -resize 50% o
 
 And of course it **is** a simple program, but whenever the first step is opeing a terminal, it is no longer simple
 
-## "Hey buddy, can you write my app?"
-This comes up every once in a while.
-I generally say the same few things to most people.
-*"No, your idea is not unique"*
+## "Oh, you're a programmer, Can't you do $THING"
+While I probably could do $THING given enough time and effort, it's not my specialty
 
-*"No I can't devote 8 months to building your app*"
+Them: *"But it's a Windows program, Don't you work on Windows"*
 
-If the idea is particularly unique I give this new set of quotes
+Me: *"First off, no, and second off, This thing you want me to do involves having a PHD level education in the field and deep knowledge of a language I've never heard of"*
 
-*"Okay, I will do it. First, I'll need you to come up with a mock-up of every page you want and a description of what each button does*"
+Them: *"Well, if you didn't want to help, you could have just said so"*
 
-*"Great, now that I see it, I'm going to need 280k for the 6 months of my and two contractor's time*"
-
-*"Oh, great. Good luck finding someone else to do it!*"
+## "Can you help with my printer"
+no
 
 ## What was the point of writing this post?
 I don't know.
