Update 3. The Secret World of Programmers.md

--- a/posts/3. The Secret World of Programmers.md
+++ b/posts/3. The Secret World of Programmers.md
@@ -45,11 +45,11 @@ And of course it **is** a simple program, but whenever the first step is opeing 
 ## "Oh, you're a programmer, Can't you do $THING"
 While I probably could do $THING given enough time and effort, it's not my specialty
 
-Them: *"But it's a Windows program, Don't you work on Windows"*
+*"But it's a Windows program"* The tears are welling up in their eyes, they plead *"Don't you work on Windows"*
 
-Me: *"First off, no, and second off, This thing you want me to do involves having a PHD level education in the field and deep knowledge of a language I've never heard of"*
+*"First off,"* I reply, *"No. And second off, This thing you want me to do involves having a PHD level education in the field and deep knowledge of a language I've never heard of"*
 
-Them: *"Well, if you didn't want to help, you could have just said so"*
+*"Well, if you didn't want to help, you could have just said so"*
 
 ## "Can you help with my printer"
 no
