fix markdown typo

--- a/posts/4. My Career Path So Far.md
+++ b/posts/4. My Career Path So Far.md
@@ -88,7 +88,7 @@ Eventually, I decided to move on, and found a job at GridPlus.
 
 ### GridPlus
 I currently work at [GridPlus](https://gridPlus.io) and develop for the [Phonon](https://phonon.network) project.
-My job is on the team writing the [Phonon Client](https://github.com/GridPlus/phonon-client] application and associated [core library](https://github.com/phononDao/phonon-core).
+My job is on the team writing the [Phonon Client](https://github.com/GridPlus/phonon-client) application and associated [core library](https://github.com/phononDao/phonon-core).
 Over time, I've become more of a technical lead on the project, partly responsible for the definition of the phonon spec, and leading the devlopment of the desktop client.
 I am also responsible for much of the external communication to the greater community.
 
