Update 5. How Apple Won.md

--- a/posts/5. How Apple Won.md
+++ b/posts/5. How Apple Won.md
@@ -22,7 +22,8 @@ Another reason is repairability.
 There are phones out there like the [FairPhone](https://www.fairphone.com/en/), which offers a phone that can be repaired easily and is expected to last for 5 years, but I find the iPhone to be more repairable.
 It's not because it is physically easier to open and replace parts, but because it's easier for me to go from broken phone to fixed phone.
 Every repair shop fixes any iphone from the last few years within a couple of hours, and with Apple Care, I can go into any Apple Store and have my phone fixed or replaced.
-This is not true of the competition.
+This is not true of the competition where there are 9000 models each with their own part numbers for every part that are difficult to get a hold of in a short amount of time.
+When my phone breaks, I need it fixed NOW, not in 2 weeks when some random guy from ebay sends me probably the wrong part. 
 
 The final reason is that it just works.
 I tinker with all of my things, but the iPhone is one that I don't play with.
@@ -33,7 +34,10 @@ All I know is that if Android updates don't ruin my phone, I will.
 This doesn't happen on my iPhones.
 
 ## iPad
+I don't have to work as hard to prove this one. No one uses android tablets. I honestly can't tell you the pros or cons of them. I was an early android tablet adopter (shout-out to the Samsung Galaxy Tab 10.1), but the android operating system simply cannot compete with the ipad os. Windows tablets exist (and have for a while), but full-fat windows is continuaally growing to the size that it's unuseable on a tablet, and outside of 8.1 or whatever, they have never made an honest effort to improve the tablet UI. Maybe I'm just ignorant, but I haven't been impressed by what I've seen. 
+
+I think the tablet exists in a weird space between phone and computer, where it doesn't necessarily need to do everything a computer can do, though it's not workable to treat it like a very large phone. I think ipad os leans too far in the direction of phone, but still has some multitasking features like splitting the screen into two screens for multitasking. When I plug in a mouse and keyboard, the gestures on the mouse do a decent job of emulating the multitasking experience I'm used to.
 
 ## MacBook
-
+I use the MacBook pro 14" for most of my daily work and play. When it comes to laptops, I like to have power, but I NEED to have longevity. If I have to plug in my laptop for half the day, it's unuseable. A laptop that requires me to pull out a charger more than once a day is just a portable workstation. This knocks out all of the gaming laptops from my consideration. For me to develop on it, a laptop needs to be relatively quiet and snappy. I'm not going to sit around all day waiting for my go files to compile. The m1 (and m2) chips provide more than enough power to do everything I need them to do without sacrificing battery life or speed too much. There is no other comparable arm offering in the windows world, and if there is, I don't want to spend hours going over all of the lower end options across 4 manufacturers to find one of the 3 good models still out there. Look, for example, at the ThinkPad. The X1 carbon is good except that you need to make sure to get the newest generation because at the time of writing it appears you can buy 3 generations on their site. Oh, also make sure you don't get the 1080 one
 ## What we can learn
