--- a/posts/5. How Apple Won.md
+++ b/posts/5. How Apple Won.md
@@ -39,5 +39,30 @@ I don't have to work as hard to prove this one. No one uses android tablets. I h
 I think the tablet exists in a weird space between phone and computer, where it doesn't necessarily need to do everything a computer can do, though it's not workable to treat it like a very large phone. I think ipad os leans too far in the direction of phone, but still has some multitasking features like splitting the screen into two screens for multitasking. When I plug in a mouse and keyboard, the gestures on the mouse do a decent job of emulating the multitasking experience I'm used to.
 
 ## MacBook
-I use the MacBook pro 14" for most of my daily work and play. When it comes to laptops, I like to have power, but I NEED to have longevity. If I have to plug in my laptop for half the day, it's unuseable. A laptop that requires me to pull out a charger more than once a day is just a portable workstation. This knocks out all of the gaming laptops from my consideration. For me to develop on it, a laptop needs to be relatively quiet and snappy. I'm not going to sit around all day waiting for my go files to compile. The m1 (and m2) chips provide more than enough power to do everything I need them to do without sacrificing battery life or speed too much. There is no other comparable arm offering in the windows world, and if there is, I don't want to spend hours going over all of the lower end options across 4 manufacturers to find one of the 3 good models still out there. Look, for example, at the ThinkPad. The X1 carbon is good except that you need to make sure to get the newest generation because at the time of writing it appears you can buy 3 generations on their site. Oh, also make sure you don't get the 1080 one
+I use the MacBook pro 14" for most of my daily work and play. When it comes to laptops, I like to have power, but I NEED to have longevity. If I have to plug in my laptop for half the day, it's unuseable. A laptop that requires me to pull out a charger more than once a day is just a portable workstation. This knocks out all of the gaming laptops from my consideration. For me to develop on it, a laptop needs to be relatively quiet and snappy. I'm not going to sit around all day waiting for my go files to compile. The m1 (and m2) chips provide more than enough power to do everything I need them to do without sacrificing battery life or speed too much. There is no other comparable arm offering in the windows world, and if there is, I don't want to spend hours going over all of the lower end options across 4 manufacturers to find one of the 3 good models still out there.
+
+Look, for example, at the ThinkPad.
+You used to be able to buy more-or-less any thinkpad and be sure that you got a good computer.
+Now, you have to make sure to avoid the 11e ones since they are chromebooks.
+I was about to go through and name all of the serieses and their variations, but I don't even know.
+From their website, you have the X1, P, E, Z, T, X, L, and C series to choose from.
+I literally have no way to tell which ones are good and which ones are crap without looking up every serires, and then every model within the series.
+I know some are okay, and some are bad, but I don't want to spend 6 hours figuring this out.
+Above all of this, I have no way to tell which ones are solid in the hand without buying them.
+
+Well, what about Dell?
+They suffer from the same problems as the ThinkPad.
+The only difference is that I can go to the local BestBuy and pick up their computers.
+They all feel like crap in the hands.
+They have better, more business oriented models, but us mere  mortals aren't allowed to even look at them before we buy.
+
+The apple experience on the other hand is easy.
+They have 2 laptops. You can get the MacBook Air, or you can get the MacBook Pro. 
+They have the same one processor that sounds like it's pretty good.
+You can go into an apple store and pick up and hold the computer
+
+I'm not even saying that the Apple is the best computer out there. My point is that I have no idea which computers from the other brands are good. 
+They've dilluted their own brand so much that to figure out which skus are good, I have to wade through a zillion online reviews only to be left with some flexing plastic crap if I make the wrong decision. With the apple one, I know that it's going to feel more or less like the ones I know from the past. 
+
+
 ## What we can learn
