Update 5. How Apple Won.md

--- a/posts/5. How Apple Won.md
+++ b/posts/5. How Apple Won.md
@@ -1,11 +1,11 @@
 # How Apple Won (How I Learned to Stop Worrying and Love the Fruit)
 [Apple](https://apple.com) aka [APPL](https://finance.yahoo.com/quote/AAPL/) has recently taken over my computing world.
 This didn't happen all at once, and I'm not particularly happy about it.
-This post is my dive into why this has happened and what we can learn from it.
+This post is meant to explain some of the good things they've done and how the greater technology world can benefit from learning from them.
 
 Note: I am by no means an apple fanboy.
 I will gladly run the best platform out there.
-The best platform is currently apple across nearly all of my devices.
+I'm not writing this to say that apple is the end-all be-al of computing, or am I assuming that I know absolutely everything.
 
 ## iPhone
 The device I (and probably you) use most of all is the [cellular telephone](https://en.wikipedia.org/wiki/Mobile_phone).
