--- a/posts/5. The importance of good audio in 2023.md
+++ b/posts/5. The importance of good audio in 2023.md
@@ -1,7 +1,7 @@
 # The importance of good audio in 2023
 There has been something missing from this widescale transition to remote work/play and it's audio quality. 
 
-Airpods are not good enough. Your laptop microphone is not good enough. You need a boom
+Airpods (even pros) are not good enough. Your laptop microphone is not good enough. You need a boom
 
 ## Why should I care?
 In the ever-remote world of today, there are few ways to show your profesisonalism (beyond of course your work output). 
@@ -13,4 +13,31 @@ The final (and I'm arguing most important) place is in virtual meetings.
 The most important thing is to be able to hear the people you are trying to communicate with and be heard by them. 
 We, as a society are completely failing at this.
 
-The most common headsets used by professionals that I interact with are 1. None, and 2. Apple airpods
+People who can't hear others when they are talking will constantly talk over others, which not only makes them look unprofessional, but prevents others from getting their ideas out. 
+People who can't be heard by others may go for minutes at a time with their listeners either not hearing them at all, or giving up on listening closely because it takes too much effort to understand them. 
+
+The most common headsets used by professionals that I interact with are 1. None, and 2. Apple airpods. 
+These can be fine for passively listening or discussing matters in a completely sterile environment devoid of things like echoey walls, background noise, or poor microphone technique. 
+These things, however, are present in nearly everyone's home office and every office out there.
+To make my point, I've uploaded a [youtube video](#TODO: insert youtube link)
+
+## What is to be done about this?
+Use a boom. 
+Look at [gaming](https://www.bestbuy.com/site/logitech-g335-wired-stereo-gaming-headset-for-pcps-4-5xbox-onexbox-series-xs-nintendo-switch-with-flip-to-mute-microphone-black/6468902.p?skuId=6468902&extStoreId=513&ref=212&loc=1&gclid=Cj0KCQjw0tKiBhC6ARIsAAOXutmatyRvmv0nlzk3NDHXxydctNTfnLnj7laI3-FLwmNSjSr5_XzDrFgaAq2mEALw_wcB&gclsrc=aw.ds), [aviation](https://www.bose.com/en_us/products/headphones/aviation_headsets/a30-aviation-headset.html#v=A30-HEADSETAVIA), or [military](https://www.envirosafetyproducts.com/3m-peltor-mt20h682fb-09n-cys-comtac-vi-nib-hearing-defender-headband-coyote-brown-1-each.html) communication equipment.
+You'll notice that the audio quality coming out of these devices isn't necessarily all that plesant, but they all allow for clear and effective communication when it counts. 
+The person speaking can hear and be heard in the worst of environments when quick and effective communication is possibly a life-or-death situation. 
+All of the headsets used by these groups utilize a boom with the microphone sitting less than an inch from the speaker's mouth with large ear cups to block out outside sound. 
+
+## Practical advice
+I'm not saying to go out and buy a MegaGamer9000 RGB Anime Cat Ears gaming headset for your next corporate meeting.
+What I am saying is to put down the airpods and pick up something more effective communication focused.
+My friends and I have recently taken to the [Shox OpenComm UC headset](https://shokz.com/products/opencomm-uc).
+This is not an advertisement for them, but just a solid baseline for good meeting audio. 
+
+## Additional note on microphone and headphones
+The microphone and headphones are still subject to the same issues as using a bad headset.
+Even if you have the most expensive best microphone out there, it will pick up too much background noise for your voice to be heard properly unless you are within an inch or 2 of it or are in a perfectly set up environment for it.
+Again, check my [youtube video](#TODO: insert youtube link).
+You can use a microphone, but only if you are monk-like in your dedication to maintining the exact distance between your mouth and the microphone. 
+Too close, and you blow out everyone's ears and look like a jerk talking over everyone. 
+Too far, and you sound like you're broadcasting from a cathedral. 
