Update 5. The importance of good audio in 2023.md

--- a/posts/5. The importance of good audio in 2023.md
+++ b/posts/5. The importance of good audio in 2023.md
@@ -31,7 +31,7 @@ All of the headsets used by these groups utilize a boom with the microphone sitt
 ## Practical advice
 I'm not saying to go out and buy a MegaGamer9000 RGB Anime Cat Ears gaming headset for your next corporate meeting.
 What I am saying is to put down the airpods and pick up something more effective communication focused.
-My friends and I have recently taken to the [Shox OpenComm UC headset](https://shokz.com/products/opencomm-uc).
+My friends and I have recently taken to the [Shokz OpenComm UC headset](https://shokz.com/products/opencomm-uc).
 This is not an advertisement for them, but just a solid baseline for good meeting audio. 
 
 ## Additional note on microphone and headphones
