--- a/posts/5. The importance of good audio in 2023.md
+++ b/posts/5. The importance of good audio in 2023.md
@@ -19,7 +19,6 @@ People who can't be heard by others may go for minutes at a time with their list
 The most common headsets used by professionals that I interact with are 1. None, and 2. Apple airpods. 
 These can be fine for passively listening or discussing matters in a completely sterile environment devoid of things like echoey walls, background noise, or poor microphone technique. 
 These things, however, are present in nearly everyone's home office and every office out there.
-To make my point, I've uploaded a [youtube video](#TODO: insert youtube link)
 
 ## What is to be done about this?
 Use a boom. 
@@ -35,9 +34,12 @@ My friends and I have recently taken to the [Shokz OpenComm UC headset](https://
 This is not an advertisement for them, but just a solid baseline for good meeting audio. 
 
 ## Additional note on microphone and headphones
-The microphone and headphones are still subject to the same issues as using a bad headset.
+The microphone and headphones combo are still subject to the same issues as using a bad headset.
 Even if you have the most expensive best microphone out there, it will pick up too much background noise for your voice to be heard properly unless you are within an inch or 2 of it or are in a perfectly set up environment for it.
-Again, check my [youtube video](#TODO: insert youtube link).
 You can use a microphone, but only if you are monk-like in your dedication to maintining the exact distance between your mouth and the microphone. 
 Too close, and you blow out everyone's ears and look like a jerk talking over everyone. 
 Too far, and you sound like you're broadcasting from a cathedral. 
+
+## Self Promotion:
+I've made a video version of this rant that can be found on [my youtube channel](https://youtu.be/eF-E2izF0iw?si=jxAMGe4sXYgyQUVI)
+If you like my style, you can get a whole lot more of it on my [twitch](https://twitch.tv/npmaile)
