--- a/posts/6. How to help and be helped when debugging software.md
+++ b/posts/6. How to help and be helped when debugging software.md
@@ -1,66 +1,39 @@
 # How to help and be helped when debugging software
+
 As I grow in my programming career, I frequently need help, and need to be helped by others. 
 The following are a few things that I've noticed are important when trying to tackle a problem with another person.
 
-## How to help
-As the rescuer in a situation, you will have almost no chance if you are thinking the same things as the rescuee. 
-If you let the rescuee lead the session, you will go down the same rabbit holes they do, and come to the same conclusions as them: The conclusions that didn't solve the problem. 
-It is rare that you will see something they didn't if they spent any time whatsoever on trying to track down the issue themselves. 
+## Discover the details in the moment
 
-- Take charge
+The helper should not allow their mind to be influenced by the ideas of the person being helped. 
+The person being helped should give a high level overview of the problem and allow the helper to re-discover the steps that have been taken to debug the issue. 
+Many times, a problem is solved because the person helping goes over an aspect of the prgram that the person needing help has "already checked 1000 times."
+If the person being helping is given too much information, they will start to fall into the same traps that the person needing the help already has.
+In addition, the person being helped shouldn't give simple answers to questions about the state of the application, but should prove them. 
+For example: Don't say that the variable in question has been initialized, but prove it's been initialized by printing it's fields.
 
-You are now leading the debug session once you agree to help.
-Do not be afraid to ask the person you are helping to re-run a command (even if they've run it a thousand times).
-Do not be afraid to tell the helpee to be quiet while you think.
-If you are being frustrated by the behavior of the person you are helping, you need to communicate that to them effectively to be mindful of your and their time. 
-Failure to control the situation will lead to an inefficient and unproductive debugging/fixing session.
+## The Person helping should be in charge
 
-- Confirm their priors
+The person needing assistance needs to be mindful of the time and effort of the person helping by allowing them to take charge. 
+This ties into the above point in that if the person being helped is leading the person helping, they will continue to fall into the same holes they have been, and gain no benefit from the person helping.
+
+## Priors must be confirmed
 
 Any non-trivial program relies on a large number of things going on behind the scenes before you even get close to the aspect being worked on.
 Many of the problems I help with come down to the person being helped having an incomplete view of the prerequisites of their solution. 
-Do not take the person you're helping's word that the prerequisites are in place. 
-Build up a mental tree of dependencies and go one-by-one confirming them. 
-The person requiring help is in too deep with their issue to consider doing this much of the time.
+The helper should not take the helpee's word that the necessary prerequisites are in place. 
+Both people should build up a mental tree of dependencies and go one-by-one confirming them. 
+The person requiring help is in too deep with their issue to consider doing this much of the time, or they may have missed a step in doing so.
 
-- Stay focused
+## Focus must be maintained
 
 Do not allow the conversation or the debugging process to go off the rails.
-Since you've already taken charge, this is simply a matter of keeping on topic.
-A common occurance is the person being helped attempting to solve the issue in another way while you're helping.
-More often than not, a diversion from the process will lead to more issues cropping up, and time being wasted.
-If the person you're helping comes up with an idea while you are on another one, insist they write it down and try it after you've exhausted the current route.
+More often than not, a diversion from the process will lead to more issues cropping up, and goodwill being wasted.
+If the person being helped comes up with an idea radically different from the one currently being attempted, the person being helped should write it down and suggest it once the current avenue has ben exhausted.
 
-- Don't allow the state to be polluted
+## Do not allow the state of the non-working code to be polluted
 
-When trying to fix things, there are always going to be a few things that get added or removed.
+When trying to fix things, there are always going to be a few things that get added or removed in each stage in the process.
 When it turns out that those additions or removals didn't solve the problem, make sure to **get rid of them**.
-Polluting the state of your current problem leads to more complex problems popping up.
-
-## How to be helped
-
-- Don't over-explain
-
-When you are rubber-duck debugging, your goal is to explain in as much detail as possible precisely what is happening.
-This is somewhat different from when you are debugging with another person.
-Allow them to ask you questions instead of going into mind-numbing detail about every aspect of the program.
-If possible, answer their questions with code based proof of your answer instead of just a "yes" or "no".
-For example: if the person helping you asks if the variable has been initialized, print the value instead of just saying it is.
-Sometimes we make small mistakes and don't realize it, and the person helping you is there to help you find them.
-
-- Let them take charge
-
-You've been in charge enough.
-Under your leadership, you've failed to find the solution. 
-You've enlisted another to help you, and to be helped as effectively as possible, you need to step aside and let them help you.
-If you are asked to prove something, you should prove it.
-Do not argue with your helper (within reason).
-You asked them to help presumably because you've run out of other options, so you should do what they say out of respect for their knowledge and time.
-
-- Don't try to fix it on your own while being helped
-
-If you have a "EUREKA" moment while you're getting help, just hold on for a second and inform the person helping you.
-If you go off and implement whatever is needed to prove your idea works, you may pollute the program in another way or interrupt the train of thought of the person helping you.
-Even if your answer is correct, if you interrupt the helper and try to fix it your way once you've already asked for help, you risk offending the person helping you.
-You will be fine on the offense point if you pollitely inform your helper that you think you have a solution. 
+Polluting the state of the current problem leads to more complex problems popping up.
 
