--- a/posts/6. How to help and be helped when debugging software.md
+++ b/posts/6. How to help and be helped when debugging software.md
@@ -1,6 +1,6 @@
 # How to help and be helped when debugging software
 
-As I grow in my programming career, I frequently need help, and need to be helped by others. 
+N00bs and experienced programmers alike come across issues they simply cannot solve alone.
 The following are a few things that I've noticed are important when trying to tackle a problem with another person.
 
 ## Discover the details in the moment
