--- a/posts/6. How to help and be helped when debugging software.md
+++ b/posts/6. How to help and be helped when debugging software.md
@@ -29,7 +29,7 @@ The person requiring help is in too deep with their issue to consider doing this
 
 Do not allow the conversation or the debugging process to go off the rails.
 More often than not, a diversion from the process will lead to more issues cropping up, and goodwill being wasted.
-If the person being helped comes up with an idea radically different from the one currently being attempted, the person being helped should write it down and suggest it once the current avenue has ben exhausted.
+If the person being helped comes up with an idea radically different from the one currently being attempted, they should write it down and suggest it to the helper once the current avenue has ben exhausted.
 
 ## Do not allow the state of the non-working code to be polluted
 
