--- a/posts/6. How to help and be helped when debugging software.md
+++ b/posts/6. How to help and be helped when debugging software.md
@@ -7,7 +7,7 @@ The following are a few things that I've noticed are important when trying to ta
 
 The helper should not allow their mind to be influenced by the ideas of the person being helped. 
 The person being helped should give a high level overview of the problem and allow the helper to re-discover the steps that have been taken to debug the issue. 
-Many times, a problem is solved because the person helping goes over an aspect of the prgram that the person needing help has "already checked 1000 times."
+Many times, a problem is solved because the person helping goes over an aspect of the program that the person needing help has "already checked 1000 times."
 If the person being helping is given too much information, they will start to fall into the same traps that the person needing the help already has.
 In addition, the person being helped shouldn't give simple answers to questions about the state of the application, but should prove them. 
 For example: Don't say that the variable in question has been initialized, but prove it's been initialized by printing it's fields.
