update discord easter egg

--- a/posts/7. A silly Discord easter egg I found.md
+++ b/posts/7. A silly Discord easter egg I found.md
@@ -65,3 +65,6 @@ Discord utilizes Twitter's snowflake format for uniquely identifiable descriptor
 ```
 
 Well, so much for the inner circle...
+
+
+update(16 hours after the original post): It turns out that it's obvious from a little admin panel for the overlay what the easter egg was. I'm just a little stupid sometimes. 
