--- a/posts/1. flashbang.md
+++ b/posts/1. flashbang.md
@@ -12,4 +12,4 @@ You can make simple black and white websites understand this as well
 ```
 I [stole this code](https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme), and you can steal it too
 
-[see it in use](https://npmaile.com)
+[see it in use](https://npmaile.com/booklist.html)
